# kuvibot

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  kuvibot.toml  main.ks  map.ks  refresh.sh  rustfmt.toml  text-commands.ks  workspace.ks
config/: kuviboy.toml  kuviman.toml
src/: abilities.ks  auth.rs  bot.ks  debug-reply.ks  eventsub.rs  main.ks  main.rs  map.ks  secret.rs  text-commands.ks
src-ks/: config.ks  main.ks
src/ttv/: auth.rs  mod.rs
twitch-bot/: Cargo.toml
twitch-bot/src/: auth.rs  eventsub.rs  lib.rs  secret.rs  service.rs
