[package]
name = "twitch-bot"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel.workspace = true
clap.workspace = true
dirs.workspace = true
env_logger.workspace = true
eyre.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-util.workspace = true
log.workspace = true
once_cell.workspace = true
open.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tmi.workspace = true
tokio.workspace = true
toml.workspace = true
twitch_api.workspace = true
twitch_oauth2.workspace = true
url.workspace = true
websocket-lite.workspace = true
chrono.workspace = true
humantime.workspace = true
chrono-humanize.workspace = true
chrono-tz.workspace = true
